# tspp

./: CMakeLists.txt  README.md
extlibs/freetype-2.5.3/: CMakeLists.txt
extlibs/libpng-1.2.51/: CMakeLists.txt
extlibs/squirrel3/: CMakeLists.txt
extlibs/zlib-1.2.8/: CMakeLists.txt
src/: main.cpp  stdinc.cpp  stdinc.hpp
src/action/: action_messages.cpp  action_messages.hpp  server_action_interface.cpp  server_action_interface.hpp  stage.cpp  stage.hpp  stage_conductor.cpp  stage_conductor.hpp  stage_interface.cpp  stage_interface.hpp  stage_loader.cpp  stage_loader.hpp
src/audio/: audio_store.cpp  audio_store.hpp  car_sounds.cpp  car_sounds.hpp  collision_sounds.cpp  collision_sounds.hpp  engine_sounds.cpp  engine_sounds.hpp  loaded_sound_effects.hpp  skid_sounds.cpp  skid_sounds.hpp  sound_controller.cpp  sound_controller.hpp  sound_effect_controller.cpp  sound_effect_controller.hpp
src/client/: chatbox_interface.cpp  chatbox_interface.hpp  client.cpp  client.hpp  client_control_interface.cpp  client_control_interface.hpp  client_interactions.cpp  client_interactions.hpp  client_interface.cpp  client_interface.hpp  client_messages.hpp  client_stage_conductor.cpp  client_stage_conductor.hpp  client_stage_interface.cpp  client_stage_interface.hpp  common_client_logic.cpp  common_client_logic.hpp  local_client.cpp  local_client.hpp  local_players.cpp  local_players.hpp  registration.hpp  resource_downloader.cpp  resource_downloader.hpp
src/controls/: control.cpp  control.hpp  control_center.cpp  control_center.hpp  control_event.hpp  control_event_processor.cpp  control_event_processor.hpp  control_event_translator.cpp  control_event_translator.hpp  control_interface.cpp  control_interface.hpp  controllable.cpp  controllable.hpp  key_mapping.cpp  key_mapping.hpp
src/core/: bresenham.hpp  config.hpp  directive_reader.hpp  game.cpp  game.hpp  game_state.cpp  game_state.hpp  handle.hpp  line_intersection.hpp  listener_utilities.hpp  pointer_handle.hpp  rect.hpp  rotation.hpp  settings_dictionary.hpp  sha256.cpp  sha256.hpp  state_machine.hpp  stream_utility.cpp  stream_utility.hpp  transform.hpp  unicode.cpp  unicode.hpp  utf8_string.cpp  utf8_string.hpp  utility.hpp  vector2.hpp
src/cup/: chat_message.cpp  chat_message.hpp  chatbox.cpp  chatbox.hpp  chatbox_listener.hpp  client_cup_interface.cpp  client_cup_interface.hpp  client_player_mapping.cpp  client_player_mapping.hpp  command_handler.hpp  cup.cpp  cup.hpp  cup_config.cpp  cup_config.hpp  cup_controller.cpp  cup_controller.hpp  cup_controller_listener.hpp  cup_interface.cpp  cup_interface.hpp  cup_listener.hpp  cup_messages.cpp  cup_messages.hpp  cup_metadata.hpp  cup_server.cpp  cup_server.hpp  download_messages.cpp  download_messages.hpp  local_cup_interface.cpp  local_cup_interface.hpp  local_players.cpp  local_players.hpp  player.hpp  registration.hpp  resource_downloader.cpp  resource_downloader.hpp  server_cup_interface.cpp  server_cup_interface.hpp  stage_assembler.cpp  stage_assembler.hpp  stage_data.hpp
src/game/: action_loader.cpp  action_loader.hpp  action_scene.cpp  action_scene.hpp  audio_loader.cpp  audio_loader.hpp  camera.cpp  camera.hpp  car_image_generator.cpp  car_image_generator.hpp  chatbox_display.cpp  chatbox_display.hpp  client_script_loader.cpp  client_script_loader.hpp  cup.cpp  cup.hpp  cup_listener.hpp  drawable_entity.cpp  drawable_entity.hpp  event_dispatcher.cpp  event_dispatcher.hpp  event_handler.hpp  game.cpp  game.hpp  game_state.cpp  game_state.hpp  generic_loader.hpp  loaded_scene.cpp  loaded_scene.hpp  loading_sequence.cpp  loading_sequence.hpp  local_loading_sequence.cpp  local_loading_sequence.hpp  particle_generator.cpp  particle_generator.hpp  player.hpp  scene_loader.cpp  scene_loader.hpp  stage_assembler.cpp  stage_assembler.hpp  (+11 more)
src/graphics/: camera.cpp  camera.hpp  colored_text.cpp  colored_text.hpp  drawable_entity.cpp  drawable_entity.hpp  fps_counter.cpp  fps_counter.hpp  fps_display.cpp  fps_display.hpp  geometry.cpp  geometry.hpp  image_loader.cpp  image_loader.hpp  particle_drawer.cpp  particle_drawer.hpp  particle_generator.cpp  particle_generator.hpp  render_scene.hpp  renderer.hpp  sprite.cpp  sprite.hpp  star_field.cpp  star_field.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  texture_area.cpp  texture_area.hpp  texture_loader.cpp  texture_loader.hpp  track_builder.cpp  track_builder.hpp
src/messages/: message.cpp  message.hpp  message_center.cpp  message_center.hpp  message_dispatcher.hpp  message_listener.hpp  message_reader.cpp  message_reader.hpp
src/network/: client.cpp  client.hpp  client_connection.cpp  client_connection.hpp  client_handle.cpp  client_handle.hpp  connection_status.hpp  message.cpp  message.hpp  message_protocol.hpp  message_reader.cpp  message_reader.hpp  server.cpp  server.hpp  server_connection.cpp  server_connection.hpp  server_message_source.cpp  server_message_source.hpp
src/resources/: car_definition.cpp  car_definition.hpp  car_handle.cpp  car_handle.hpp  car_identifier.hpp  car_image_generator.cpp  car_image_generator.hpp  car_model.hpp  car_store.cpp  car_store.hpp  collision_mask.hpp  control_point.hpp  font_face.cpp  font_face.hpp  font_library.cpp  font_library.hpp  generic_loader.hpp  image_loader.cpp  image_loader.hpp  image_type.hpp  include_path.cpp  include_path.hpp  loader_interface.hpp  loading_interface.cpp  loading_interface.hpp  pattern.cpp  pattern.hpp  pattern_builder.cpp  pattern_builder.hpp  pattern_loader.cpp  pattern_loader.hpp  player_color.cpp  player_color.hpp  player_definition.hpp  player_store.cpp  player_store.hpp  resource_identifier.hpp  resource_store.cpp  resource_store.hpp  script_manager.cpp  (+30 more)
src/script/: argument_stream.cpp  argument_stream.hpp  callback.cpp  callback.hpp  class_definition.cpp  class_definition.hpp  common_script_errors.hpp  control_point_interface.cpp  control_point_interface.hpp  delegate_definition.cpp  delegate_definition.hpp  delegate_traits.hpp  delegates_impl.hpp  error_level.hpp  event_interface.hpp  event_manager.cpp  event_manager.hpp  hud_overlay.cpp  (+43 more)
(+299 files in other folders)
